Update Dashboard layout .ipynb

--- a/dashboard layout/Dashboard layout .ipynb
+++ b/dashboard layout/Dashboard layout .ipynb
@@ -1,6 +1,163 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing packages:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "from datetime import datetime, timedelta\n",
+    "import plotly.graph_objects as go\n",
+    "import dash_bootstrap_components as dbc\n",
+    "import dash\n",
+    "import dash_core_components as dcc\n",
+    "import dash_html_components as html\n",
+    "from plotly.subplots import make_subplots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dashboard layout styling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = dash.Dash(external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
+    "\n",
+    "\n",
+    "#define styling\n",
+    "\n",
+    "# the style arguments for the sidebar\n",
+    "SIDEBAR_STYLE = {\n",
+    "    \"position\": \"fixed\",\n",
+    "    \"top\": 0,\n",
+    "    \"left\": 0,\n",
+    "    \"bottom\": 0,\n",
+    "    \"width\": \"35rem\",\n",
+    "    \"padding\": \"2rem 1rem\",\n",
+    "    \"background-color\": \"#f8f9fa\",\n",
+    "}\n",
+    "\n",
+    "# the styles for the main content position it to the right of the sidebar and\n",
+    "# add some padding.\n",
+    "CONTENT_STYLE = {\n",
+    "    \"margin-left\": \"18rem\",\n",
+    "    \"margin-right\": \"2rem\",\n",
+    "    \"padding\": \"2rem 1rem\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dashboard layout - components:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------------------------------------------------------------------------------------------------------\n",
+    "# define dashboard layout\n",
+    "sidebar = html.Div(\n",
+    "    [\n",
+    "        html.H2(\"Vergroening Breda\", className=\"display-6\"),\n",
+    "        html.Hr(),\n",
+    "        html.P(\n",
+    "            \"Kies een buurt in breda en verplaats de slider om het effect van vergroening te zien\", className=\"lead\"\n",
+    "        ),\n",
+    "        dbc.DropdownMenu(label=\"Selecteer een buurt\", children=[dbc.DropdownMenuItem(\"Buurt 1\"), dbc.DropdownMenuItem(\"Buurt 2\"),\n",
+    "           dbc.DropdownMenuItem(\"Buurt 3\"),\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "\n",
+    "    ],\n",
+    "    style=SIDEBAR_STYLE,\n",
+    ")\n",
+    "\n",
+    "content = html.Div([], style=CONTENT_STYLE)\n",
+    "\n",
+    "app.layout = html.Div([sidebar, content])\n",
+    "\n",
+    "#-------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Callback functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run app:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:5001/\n",
+      "\n",
+      " Warning: This is a development server. Do not use app.run_server\n",
+      " in production, use a production WSGI server like gunicorn instead.\n",
+      "\n",
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5001/ (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#run app\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run_server(port=5001)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
