obs.org analyze regressie

--- a/waarnemingen/obs.org-analysis.ipynb
+++ b/waarnemingen/obs.org-analysis.ipynb
@@ -2,13 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lab_black extension is already loaded. To reload it, use:\n",
+      "  %reload_ext lab_black\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext lab_black\n",
     "\n",
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import ee\n",
+    "from geopandas.tools import sjoin\n",
+    "from shapely.geometry import Point\n",
+    "from geopandas.tools import sjoin\n",
+    "from shapely.geometry import Point\n",
     "\n",
     "cols_i = [\n",
     "    \"identifier\",\n",
@@ -34,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,28 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[~pd.isna(df.eventDate)]\n",
-    "df = df[df.eventDate.str.slice(0, 4).astype(int) > 1950]\n",
-    "df[\"event_date\"] = pd.to_datetime([t.split(\"T\")[0] for t in df.eventDate])\n",
-    "df[\"year\"] = df.eventDate.str.slice(0, 4).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5030365280>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfda52d400>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,52 +85,45 @@
     }
    ],
    "source": [
+    "df = df[~pd.isna(df.eventDate)]\n",
+    "df = df[df.eventDate.str.slice(0, 4).astype(int) > 1950]\n",
+    "df[\"event_date\"] = pd.to_datetime([t.split(\"T\")[0] for t in df.eventDate])\n",
+    "df[\"year\"] = df.eventDate.str.slice(0, 4).astype(int)\n",
     "df.groupby(df.year).count().identifier.plot.bar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/opt/anaconda/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3071: DtypeWarning: Columns (17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_species = pd.read_csv(\"/data/projects/hackaton-2020/species.csv\", sep=\";\")\n",
-    "df_species = df_species[[\"Wetenschappelijke naam\", \"Zeldzaamheid\", \"Soortgroep\"]]\n",
-    "df_species.columns = [\"name\", \"rarity\", \"species_type\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_m = pd.merge(\n",
-    "    df, df_species, how=\"left\", left_on=[\"verbatimScientificName\"], right_on=[\"name\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f505ca1cfa0>"
+       "(623238, 20)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfd8a64b20>"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -145,152 +141,64 @@
     }
    ],
    "source": [
+    "df_species = pd.read_csv(\"/data/projects/hackaton-2020/species.csv\", sep=\";\")\n",
+    "df_species = df_species[[\"Wetenschappelijke naam\", \"Zeldzaamheid\", \"Soortgroep\"]]\n",
+    "df_species.columns = [\"name\", \"rarity\", \"species_type\"]\n",
+    "df_m = pd.merge(\n",
+    "    df, df_species, how=\"left\", left_on=[\"verbatimScientificName\"], right_on=[\"name\"]\n",
+    ")\n",
     "df_m.groupby(df_m.year).mean().rarity.plot.bar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_evi = pd.read_csv(\"../data/satdata/evi.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "import ee\n",
-    "breda = gpd.read_file('../data/shape/breda.shp')\n",
-    "breda = breda.to_crs(epsg=4326) # to lat-lon\n",
-    "breda = breda.loc[0, 'geometry'].__geo_interface__\n",
-    "AOI = ee.Geometry.Polygon(breda['coordinates'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['type', 'coordinates'])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
-   "source": [
-    "breda.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   },
    "outputs": [],
    "source": [
-    "buurten = gpd.read_file('../data/shape/breda_buurten.shp')\n",
-    "buurten = buurten.to_crs(epsg=4326) # to lat-lon\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "points = [Point(xy) for xy in zip(df.decimalLongitude, df.decimalLatitude)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<shapely.geometry.point.Point at 0x7f146b600250>,\n",
-       " <shapely.geometry.point.Point at 0x7f1448e8a580>]"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "points[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from geopandas.tools import sjoin\n",
-    "from shapely.geometry import Point"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/opt/anaconda/lib/python3.8/site-packages/pyproj/crs/crs.py:53: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "  return _prepare_from_string(\" \".join(pjargs))\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_geo = gpd.GeoDataFrame(crs=\"epsg:4326\", geometry=points)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-69-a99fb842a953>:1: UserWarning: CRS mismatch between the CRS of left geometries and the CRS of right geometries.\n",
-      "Use `to_crs()` to reproject one of the input geometries to match the CRS of the other.\n",
-      "\n",
-      "Left CRS: +init=epsg:4326 +type=crs\n",
-      "Right CRS: EPSG:4326\n",
-      "\n",
-      "  df_joined = sjoin(df_geo, buurten)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_joined = sjoin(df_geo, buurten)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_evi = pd.read_csv(\"../data/satdata/evi.csv\")\n",
+    "buurten = gpd.read_file(\"../data/shape/breda_buurten.shp\")\n",
+    "buurten = buurten.to_crs(epsg=4326)  # to lat-lon\n",
+    "points = [Point(xy) for xy in zip(df.decimalLongitude, df.decimalLatitude)]\n",
+    "df_geo = gpd.GeoDataFrame(crs=\"epsg:4326\", geometry=points)\n",
+    "df_joined = sjoin(df_geo, buurten)\n",
     "df_joined[\"year\"] = df_m.loc[df_joined.index].year\n",
     "df_joined[\"obs_rarity\"] = df_m.loc[df_joined.index].rarity\n",
     "df_joined[\"species_type\"] = df_m.loc[df_joined.index].species_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(237663, 48)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points = [Point(xy) for xy in zip(df.decimalLongitude, df.decimalLatitude)]\n",
+    "df_geo = gpd.GeoDataFrame(crs=\"epsg:4326\", geometry=points)\n",
+    "df_joined = sjoin(df_geo, buurten)\n",
+    "df_joined[\"year\"] = df_m.loc[df_joined.index].year\n",
+    "df_joined[\"obs_rarity\"] = df_m.loc[df_joined.index].rarity\n",
+    "df_joined[\"species_type\"] = df_m.loc[df_joined.index].species_type\n",
+    "df_joined.shape"
    ]
   },
   {
@@ -306,22 +214,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BU_NAAM</th>\n",
+       "      <th>year</th>\n",
+       "      <th>obs_rarity</th>\n",
+       "      <th>species_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mastbos</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mastbos</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mastbos</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Mastbos</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Mastbos</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370698</th>\n",
+       "      <td>Biesdonk</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402508</th>\n",
+       "      <td>Biesdonk</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402584</th>\n",
+       "      <td>Biesdonk</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402629</th>\n",
+       "      <td>Biesdonk</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>528240</th>\n",
+       "      <td>Biesdonk</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>237663 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(237663, 48)"
+       "         BU_NAAM  year  obs_rarity  species_type\n",
+       "0        Mastbos  2006         1.0           9.0\n",
+       "4        Mastbos  2016         1.0           1.0\n",
+       "7        Mastbos  2017         1.0           2.0\n",
+       "13       Mastbos  2018         2.0          10.0\n",
+       "20       Mastbos  2012         1.0           1.0\n",
+       "...          ...   ...         ...           ...\n",
+       "370698  Biesdonk  2015         1.0           1.0\n",
+       "402508  Biesdonk  1987         1.0          10.0\n",
+       "402584  Biesdonk  1989         1.0          10.0\n",
+       "402629  Biesdonk  2018         1.0          10.0\n",
+       "528240  Biesdonk  2007         1.0           9.0\n",
+       "\n",
+       "[237663 rows x 4 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_joined.shape"
+    "df_joined[[\"BU_NAAM\", \"year\", \"obs_rarity\", \"species_type\"]]"
    ]
   }
  ],
